# beer-scraper

./: .gitignore  Dockerfile  Makefile  README.md  TODO.md  cli.py  pyproject.toml  run_scrapers.py  scrapy.cfg
beerspider/: items.py  middlewares.py  pipelines.py  settings.py  utils.py
beerspider/database/: models.py  utils.py
beerspider/spiders/: beertasting-manual.py  beertasting.py  beertasting_manual.py  beyondbeer.py  bierline-shop.py  biermarket.py  bierothek.py  bierpost.py  bierselect.py  craftbeershop.py  flaschenpost-manual.py  flaschenpost_manual.py  meibier.py  ratsherrn.py
beerspider/spiders/beers/: beertasting.py  beertasting_manual.py  beerwulf.py  beyondbeer.py  bierdeluxe.py  bierkaufen.py  bierline.py  bierlinie.py  bierlinie_manual.py  biermarket.py  bierothek.py  bierpost.py  bierselect.py  craftbeershop.py  flaschenpost.py  flaschenpost_manual.py  hiergibtsbier.py  holy_craft.py  holycraft.py  landbierparadies.py  meibier.py  meibier_manual.py  ratsherrn.py  rewe.py  rewe_manual.py
beerspider/spiders/breweries/: craftbeershop.py
cli/: main.py
