[tool.poetry]
name = "beer_scraper"
version = "0.0.1"
description = "Scraping all the beer in the world imaginable"
authors = ["Tom Jansen <tomjansen25@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
Scrapy = "^2.5.1"
SQLAlchemy = "^1.4.31"
price-parser = "^0.3.4"
numpy = "^1.22.1"
loguru = "^0.6.0"
playwright = "^1.25.2"
scrapy-playwright = "^0.0.21"

[tool.poetry.dev-dependencies]
pylint = "^2.12.2"
black = "^22.1.0"
mypy = "^0.931"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py39']

[tool.isort]
profile = "black"
include_trailing_comma = true
use_parentheses = true
line_length = 88
