[tool.poetry]
name = "beer_scraper"
version = "0.0.1"
description = "Scraping all the beer in the world (Germany) imaginable"
authors = ["Tom Jansen <tomjansen25@gmail.com>"]
readme = "README.md"
packages = [{ include = "cli" }]

[tool.poetry.scripts]
beerscrapercli = "cli.main:app"

[tool.poetry.dependencies]
python = "^3.9"
Scrapy = "^2.5.1"
SQLAlchemy = "^1.4.31"
price-parser = "^0.3.4"
numpy = "^1.22.1"
loguru = "^0.6.0"
playwright = "^1.25.2"
scrapy-playwright = "^0.0.21"
pandas = "^1.4.4"
typer = "^0.7.0"
polars = "^0.17.12"
plotly = "^5.14.1"
duckdb = "^0.8.0"

[tool.poetry.group.dev.dependencies]
pylint = "^2.12.2"
black = {extras = ["d"], version = "^23.3.0"}
mypy = "^0.931"
jupyterlab = "^4.0.2"
ipywidgets = "^8.0.6"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py39']

[tool.isort]
profile = "black"
include_trailing_comma = true
use_parentheses = true
line_length = 88
